--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
-    "socket.io": "^4.5.3"
+    "socket.io": "^4.5.3",
+    "vercel": "^32.5.6"
   },
   "name": "chathosted",
   "version": "1.0.0",
